# dockery

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  com.scrlkx.dockery.json  com.scrlkx.dockery.py-deps.yml  develop.sh  meson.build  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt
data/: com.scrlkx.dockery.desktop.in  com.scrlkx.dockery.gschema.xml  com.scrlkx.dockery.metainfo.xml.in  com.scrlkx.dockery.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: client.py  container_page.py  container_page.ui  containers_page.py  containers_page.ui  dockery.gresource  dockery.gresource.xml  dockery.in  events.py  main.py  meson.build  style.css  ui.py  utils.py  window.py  window.ui
src/components/: key_value_row.py
src/pages/: container_page.py  container_page.ui  containers_page.py
src/utils/: docker.py  events.py  ui.py
typings/docker/models/: containers.pyi
